--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #ffa500;
+    color: #fff;
     text-decoration: none;
     font-size: 20px;
     position: relative;
