--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #fff;
+    background: #ffa500;
     position: absolute;
     left: 0;
     bottom: -6px;
