--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     top: 100px;
     left: -5px;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(0, 0, 0);
+    box-shadow: inset 0 0 0 9px rgb(234, 227, 227);
     order: 1;
     justify-self: center;
     width: 400px;
@@ -90,7 +90,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #000000;
+    background: #ababab;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -114,12 +114,12 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #000000;
+    color: #ababab;
 }
 
 .header-text span-1{
     color: #000000;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .header-text span-2{
@@ -140,7 +140,7 @@ nav ul li a:hover::after{
 
 #about{
     padding: 70px 0;
-    color: #000000;
+    color: #ababab;
 }
 
 .row{
@@ -229,7 +229,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div{
-    background: #ababab;
+    background: #262626;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -259,7 +259,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background: #000000;
+    background: #ababab;
     transform: translateY(-10px);
 }
 
@@ -277,12 +277,12 @@ nav ul li a:hover::after{
     margin: 50px auto;
     width: fit-content;
     border: 1px solid #ababab;
+    background-color: #000000;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
     color:#fff;
     transition: background 0.5s;
-    background-color: #000000;
 }
 
 .btn:hover{
@@ -312,7 +312,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #000000;
+    color: #ababab;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -325,7 +325,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color: #000000;
+    color: #ababab;
     display: inline-block;
 }
 
@@ -366,7 +366,7 @@ form btn2{
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: #2a2a2a;
+    background: #262626;
     font-size:300;
     margin-top: 20px;
 }
@@ -512,12 +512,12 @@ nav i{
 .header-text span-2{
     font-style: italic;
     font-size: 10px;
-    color: #000000;
+    color: #ababab;
     }
 
 #about{
     margin-top: -170px;
-    color: #000000;
+    color: #ababab;
     }
 
 .sub-title{
