--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ababab;
+    background: #000000;
     position: absolute;
     left: 0;
     bottom: -6px;
