--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    
     margin: 0;
     padding: 0;
     font-family: 'poppins', sans-serif;
@@ -8,9 +9,9 @@
 html{
     scroll-behavior: smooth;
 }
+
 body {
-    background-color: #fff;
-    color: #fff;
+    background-color: #f1f1f1;
 }
 
 #header{
@@ -21,23 +22,25 @@ body {
 .container {
     padding: 10px 10%;
 }
+.part-b{
+    margin-top: -40px;
+}
 
 .home-img{
 
     background-image: url(main-img.png);
     background-repeat: no-repeat;
     position: relative;
-    top: 100px;
-    left: -5px;
+    top: 220px;
+    left: -75px;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(234, 227, 227);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     order: 1;
     justify-self: center;
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     float:right;
-
 }
 
 @keyframes profile__animate {
@@ -53,6 +56,18 @@ body {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
 }
+nav .logo-name{
+    
+    position: relative;
+    font-size: 20px;
+    margin-left: -750px;
+    color: #555555;
+    font-weight: 550;
+}
+#sidemenu{
+   position: relative;
+   margin-right: -100px;
+}
 
 nav{
     display:flex;
@@ -60,77 +75,114 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
 .logo{
     width: 0px;
 }
-
 nav .logo-name{
-    position: relative;
-    top: 1px;
-    font-size: 20px;
-    color: #000000;
+   position: relative;
+   font-size: 20px;
+   margin-left: 20px;
+   color: #555555;
+   font-weight: 550;
+   border: 1px #f1f1f1;
+   border-radius: 15px;
+   text-align: center;
+   padding: 9px;
 }
-
+.logo-name a{
+    text-decoration: none;
+    color: #555555;
+    position: relative;
+    margin-left: -100px;
+}
 nav ul li{
     display: inline-block;
     list-style: none;
     margin: 30px 10px;
+    position: relative;
 }
 
 nav ul li a{
-    color: #000000;
+    position: relative;
+    color: #555555;
     text-decoration: none;
     font-size: 20px;
-    position: relative;
-
+    text-align: center;
+    padding: 9px;
+    
 }
-
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #000000;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-
-nav ul li a:hover::after{
-    width: 100%;
-
-}
-
 .header-text{
-    margin-top: 15%;
-    font-size: 25px;
-    color: #000000;
+    color: #555555;
+    margin-left:-800px;
 }
 
 .header-text h1{
-    font-size: 70px;
-    margin-top: 20px;
+    margin-top: -20px;
+    font-size: 60px;
+    font-weight: 450;
+}
+.social-icon{
+    position: relative;
+    margin-left: -770px;
+
+}
+.getintouch span1 {
+    position: relative;
+    right: 8px;
+}
+.getintouch{
+    display: inline-block;
+    color: #808080;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    margin: -28px;
+    border-radius: 15px;
+    width: 180px;
+    border: 1px #f1f1f1;
+    padding: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+   
 }
 
-.header-text h1 span{
-    color: #ababab;
+.getintouch a{
+    text-decoration: none;
+    color: #808080;
+}
+.getintouch:hover{
+    color: #808080;
+    transform: translateY(-5px);
+    
+}
+.social-icon-1 i {
+    position: relative;
+    text-align: center;
+    font-size: 15px;
+}
+.social-icon-1{
+    display: inline-block;
+    position: relative;
+    padding: 15px;
+    left: 36px;
+}
+.social-icon-1 a{
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 25px;
+    margin-right: 10px;
+    color: #808080;
+    border: 1px #f1f1f1;
+    padding: 0px 13px 2px;
+    border-radius: 50%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    
 }
 
-.header-text span-1{
-    color: #000000;
-    font-size: 20px;
+.social-icon-1 a:hover{
+    color: #808080;
+    transform: translateY(-5px);   
 }
-
-.header-text span-2{
-    font-style: italic;
-    font-size: 12px;
-    color: #000000;
-}
-
-
-
-
 
 /*----------about----------*/
 
@@ -139,8 +191,14 @@ nav ul li a:hover::after{
 
 
 #about{
-    padding: 70px 0;
-    color: #ababab;
+    margin-top: 200px;
+    padding: 60px 0;
+    color: #9c9c9c;
+    border: 1px solid #f1f1f1;
+    border-radius: 25px;
+    margin-left: 90px;
+    margin-right: 100px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .row{
@@ -149,18 +207,21 @@ nav ul li a:hover::after{
     flex-wrap: wrap;
 }
 
-.about-col-2{
+.about-col{
     text-align: left;
 }
 
 .sub-title {
-    font-size: 60px;
-    font-weight: 600;
-    color: #000000;
+    font-size: 50px;
+    text-align:left;
+    font-weight: 500;
+    color: #555555;
     margin-bottom: 10px;
 }
 
 .tab-titles{
+    
+    color: #555555;
     display: flex;
     margin: 20px 0 40px;
 }
@@ -177,7 +238,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #000000;
+    background: #555555;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -195,12 +256,13 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #000000;
+    color: #555555;
     font-size: 14px;
 }
 
 .tab-contents{
     display: none;
+ 
 }
 
 .tab-contents.active-tab{
@@ -218,7 +280,7 @@ nav ul li a:hover::after{
 
 
 #Services{
-    padding: 30px 0;
+    padding: 180px 0;
 }
 
 .services-list{
@@ -229,22 +291,25 @@ nav ul li a:hover::after{
 }
 
 .services-list div{
-    background: #262626;
+    background: #f1f1f1;
+    color: #9c9c9c;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
-    border-radius: 10px;
+    border-radius: 25px;
     transition: background 0.5s, transform 0.5s;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 
 .services-list div i{
+    color: #555555;
     font-size: 50px;
     margin: 30px;
 }
 
 .services-list div h2{
-
+    color: #555555;
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
@@ -252,14 +317,14 @@ nav ul li a:hover::after{
 
 .services-list div a{
     text-decoration: none;
-    color: #fff;
+    color: #f1f1f1;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
 
 .services-list div:hover{
-    background: #ababab;
+    background: #f1f1f1;
     transform: translateY(-10px);
 }
 
@@ -271,22 +336,29 @@ nav ul li a:hover::after{
 
 
 
-
 .btn{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ababab;
-    background-color: #000000;
+    border: 1px solid #f1f1f1;
+    background-color: #f1f1f1;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color:#fff;
-    transition: background 0.5s;
+    color: #555555;
+    transition: background 0.3s;
+    cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+    
 }
 
 .btn:hover{
-    background: #ababab;
+    background: #f1f1f1;
+
+}
+.btn:active {
+    transform: translateY(4px);
 }
 
 
@@ -308,11 +380,11 @@ nav ul li a:hover::after{
 
 .contact-left p{
     margin-top: 30px;
-    color: #000000;
+    color: #555555;
 }
 
 .contact-left p i{
-    color: #ababab;
+    color: #555555;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -320,23 +392,36 @@ nav ul li a:hover::after{
 .social-icons{
     margin-top: 30px;
 }
+.social-icons i {
+    position: relative;
+    text-align: center;
+    font-size: 15px;
+}
 
 .social-icons a{
     text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    color: #ababab;
+    text-align: center;
+    font-size: 25px;
+    margin-right: 10px;
+    color: #808080;
     display: inline-block;
+    border: 1px #f1f1f1;
+    text-align: center;
+    padding: 2px 13px 3px;
+    border-radius: 50%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    
 }
 
 .social-icons a:hover{
-    color: #000000;
+    color: #808080;
     transform: translateY(-5px);   
 }
 
 .btn.btn2{
     display: inline-block;
-    background:#000000;
+    background:#f1f1f1;
+    color: #555555;
 }
 
 .contact-right form{
@@ -347,12 +432,13 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #000000;
+    background: #f1f1f1;
     padding: 15px;
     margin: 15px 0;
-    color: #fff;
+    color: #555555;
     font-size: 18px;
-    border-radius: 6px;   
+    border-radius: 6px;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
 form btn2{
@@ -367,12 +453,19 @@ form btn2{
     text-align: center;
     padding: 25px 0;
     background: #262626;
+    color: #f1f1f1;
     font-size:300;
     margin-top: 20px;
 }
 
 .copyright i{
     color: #ff004f;
+}
+#msg {
+    position: relative;
+    top: -30px;
+    font-size: 10px;
+    color: green;
 }
 
 
@@ -384,162 +477,87 @@ form btn2{
 /*------------css for small screen-------*/
 
 
-
-
-
-
-
-
 nav .fas{
     display:none;
 }
 
 @media only screen and (max-width:600px){
- 
-.home-img{
-
-    background-image: url(main-img.png);
-    background-repeat: no-repeat;
-    position: relative;
-    top: 80px;
-    left: -35px;
-    background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(234, 227, 227);
-    order: 1;
-    justify-self: center;
-    width: 230px;
-    height: 230px;
-    animation: profile__animate 8s ease-in-out infinite 1s;
-    float:right;
-    }
-
-    @keyframes profile__animate {
-    0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-
-    50% {
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-    }
-    
-    100% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-    }
-
     .header-text{
         margin-top: 100%;
         font-size: 16px;
     }
     .header-text h1{
         font-size: 30px;
-        margin-top: 30px;
     }
-
-nav .fas{
-    display:block;
-    font-size: 25px;
-    color: #000000;
-    }
-
-nav ul{
-    background: #fff;
-    position: fixed;
-    top: 0;
-    right: -200px;
-    width: 200px;
-    height:100vh;
-    padding-top: 50px;
-    z-index: 2;
-    transition: right 0.5s;
-    }
-
-    nav .logo-name{
+    nav .fas{
+        display:block;
+        font-size: 25px;
+        color: #000000;
+        }
+    
+    nav ul{
+        background: #fff;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        width: 200px;
+        height:100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+        }
+    
+        nav .logo-name{
+            position: relative;
+            top: 10px;
+            right: 10px;
+            font-size: 15px;
+            color: #000000;
+        }
+    
+    nav ul li{
+        display: block;
+        margin: 25px;
+        }
+    
+    nav ul li a::after{
+        content: '';
+        width: 0;
+        height: 3px;
+        background: #000000;
+        position: absolute;
+        left: 0;
+        bottom: -6px;
+        transition: 0.5s;
+        }
+    
+    nav ul .fas{
+        position:absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+        }
+    
+    nav i{
         position: relative;
         top: 10px;
-        right: 10px;
-        font-size: 15px;
-        color: #000000;
+        left: 20px;
+        }
+    .sub-title{
+        font-size: 40px;
     }
-
-nav ul li{
-    display: block;
-    margin: 25px;
+    .about-col {
+        flex-basis: 100%;
     }
-
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #000000;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
     }
-
-nav ul .fas{
-    position:absolute;
-    top: 25px;
-    left: 25px;
-    cursor: pointer;
+    .contact-left, .contact-right{
+        flex-basis: 100%;
     }
-
-nav i{
-    position: relative;
-    top: 10px;
-    left: 20px;
-    }
-
-.header-text{
-    margin-top: 13%;
-    font-size: 25px;
-    color: #000000;
-    }
-
-.header-text h1{
-    font-size: 30px;
-    margin-top: 350px;
-    color: #000000;
-
-    } 
-
-.header-text span-1{
-    color: #000000;
-    font-size: 10px;
-    }
-    
-.header-text span-2{
-    font-style: italic;
-    font-size: 10px;
-    color: #ababab;
-    }
-
-#about{
-    margin-top: -170px;
-    color: #ababab;
-    }
-
-.sub-title{
-    font-size: 40px;
-    }
-
-.tab-links{
-    font-size: 16px;
-    margin-right: 20px;
-    }
-
-.contact-left, .contact-right{
-    flex-basis: 100%;
-    }
-
-.copyright{
+    .copyright{
         font-size: 14px;
     }
-    }
-    
-#msg{
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
 }
+
